app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

 @import url(//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);


body {
  background-color: #ffffff;
   color: #000000;
   font-family: Arial;
   font-size: 1.25em;
   line-height: 1.5em;
   margin: 0em;
   text-align: center;
}


header {
  padding: .5em;
  background-color: #3700b3;
  color: white;
  font-family: Arial;
  line-height: 2em;
  text-align: center;
}

li {
  list-style: none;
  text-align: center
}

a {
  text-decoration: none;
}

a:link {
  color: #3700b3;
}

a:hover {
  text-decoration: underline;
}

a:visited {
  color: #3700b3;
}

hr {
  border: 1px dashed #6200ee;
}

input[type=button], input[type=submit] {
  background-color: #6200ee;
  border: none;
  color: white;
  padding: 16px 32px;
  text-decoration: none;
  margin: 4px 2px;
  cursor: pointer;
  width: 20%;
  text-align: center;
}

.nav-bar {
  font-family: Arial;
  background-color: #3700b3;
  color: black;
  text-align: left;
  font-size: 1.25em;
  padding: 0px;
}

#logo {
  padding: .5vw;
  font-size: 2vmax;
  letter-spacing: 0.15em;
  font-style: italic;
  text-align: right;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  float: right;
  position: relative;
  top: -0.25vmax;
  right: 5%;
}

.nav-bar a {
  color: #ffffff;
  padding: 2.5vmax;
  font-size: 2vmax
}

#new-app {
  display: inline-block;
  margin-left: auto;
  margin-right: auto;
  width: 30%;
  text-align: left;
}

.row {
  display: flex;
}

/* Create two equal columns that sits next to each other */
.column {
  flex: 50%;
  padding: 10px;
}

.container {
  width: 200px;
  height: 120px;
}

.img-container {
  width: 50%;
  height: auto;
}

.pet_img {
  max-width: 50%;
  max-height: auto;
  height: auto;
  overflow: hidden;
  padding: 20px 0px 20px 0px;
}

#description {
  margin-top: 0.75vw;
  width: 50%;
  height: 10vw;
}

#the-flash {
  margin-top: 1vw;
  padding: 0% 28%;
  font-size: 0.8em;
  font-style: italic;
}

.flash {
  color: #b00020;
}

#adopt {
  padding-left: 3vw;
  color: #b00020
}

#reject {
  padding-left: 3vw;
  color: #b00020;
  font-size: 0.75em;
}

#approve {
  padding-left: 3vw;
  font-size: 0.75em;
}

.app-pet-status {
  padding-left: 5vw;
  font-size: 0.75em;
  font-style: italic;
}

.rejected {
  color: #b00020;
}

.approved {
  color: rgb(0, 135, 0);
}

#new-app input {
  float: right; 
  display: inline-block
}

.stat {
  font-style: italic;
  font-size: 1.25em;
  padding: 2vw 0vw 4vw 0vw;
  text-align: center;
}

